RESOLVED FIXED43560
[DRT/Chromium] Should revoke scheduled tasks
https://bugs.webkit.org/show_bug.cgi?id=43560
Summary [DRT/Chromium] Should revoke scheduled tasks
Kent Tamura
Reported 2010-08-05 07:29:27 PDT
[DRT/Chromium] Should revoke scheduled tasks
Attachments
Patch (5.40 KB, patch)
2010-08-05 07:33 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2010-08-05 07:30:51 PDT
In http://build.webkit.org/builders/Chromium%20Linux%20Release%20(Tests)/builds/3235/steps/layout-test/logs/stdio 100805 06:25:29 dump_render_tree_thread.py:88 DEBUG Stacktrace for /WebKit-BuildSlave2/chromium-linux-release-tests/build/LayoutTests/fast/dom/HTMLTableColElement/resize-table-using-col-width.html: [8689:8689:6816332780586:ERROR:WebKit/chromium/base/process_util_posix.cc(107)] Received signal 11 StackTrace::StackTrace() [0xbd93de] base::(anonymous namespace)::StackDumpSignalHandler() [0xbe9239] 0x2b9d3befa040 WebKit::WebDevToolsFrontendImpl::dispatchOnInspectorFrontend() [0x4299e3] DRTDevToolsClient::call() [0x40938e] MessageLoop::RunTask() [0xbe491d] MessageLoop::DeferOrRunPendingTask() [0xbe4b9c] MessageLoop::DoWork() [0xbe4e61] base::MessagePumpForUI::RunWithDispatcher() [0xbf1676] MessageLoop::RunInternal() [0xbe2723] MessageLoop::Run() [0xbe283c] TestShell::waitTestFinished() [0x41efd5] TestShell::runFileTest() [0x41d752] runTest() [0x409ad3] main [0x40a048] 0x2b9d3bee55a6 0x4002b9 A non-devtools test crashed in DevToolsClient.
Kent Tamura
Comment 2 2010-08-05 07:33:08 PDT
Dimitri Glazkov (Google)
Comment 3 2010-08-05 07:40:01 PDT
Comment on attachment 63590 [details] Patch this is great find, thanks!
Kent Tamura
Comment 4 2010-08-06 06:22:42 PDT
Comment on attachment 63590 [details] Patch Clearing flags on attachment: 63590 Committed r64843: <http://trac.webkit.org/changeset/64843>
Kent Tamura
Comment 5 2010-08-06 06:22:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.