2010-08-06  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Should revoke scheduled tasks
        https://bugs.webkit.org/show_bug.cgi?id=43560

        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp:
        (DRTDevToolsAgent::reset): Calls RevokeAll().
        * DumpRenderTree/chromium/DRTDevToolsAgent.h:
        * DumpRenderTree/chromium/DRTDevToolsClient.cpp:
        (DRTDevToolsClient::reset): Calls RevokeAll().
        * DumpRenderTree/chromium/DRTDevToolsClient.h:
        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::reset): Calls RevokeAll().
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::reset): Calls RevokeAll().
        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::resetTestController): Calls DRTDevToolsAgent::reset() and DRTDevToolsClient::reset().

Canonical link: https://commits.webkit.org/55659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64843 268f45cc-cd09-0410-ab3c-d52691b4dbfc